--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,11 @@ repositories {
     mavenCentral()
 }
 sourceSets {
+    main {
+        java {
+            srcDirs = ["src/main/java"]
+        }
+    }
     test {
         java {
             srcDirs = ["src/test/java"]
