1. IOUtils.genOutputFileName - redone with apache.commons-io; 2. All file inputs/outputs rewritten through BufferedInput(Output)Streams; 3. TempDirs for tests 4. Zero key Tests added 5. outputName = null tests separated from not null ones; 6. input_007.txt - russian literals now 7. Whole coding algorithm changed: --- Reads same chars' amount as in key --- xor one by one --- HexKey.java class added to make the algorithm more obvious

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
 }
 
 group 'org.example'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -24,6 +23,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.kohsuke.args4j/args4j-maven-plugin
     implementation 'org.kohsuke.args4j:args4j-maven-plugin:2.33'
 
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation 'commons-io:commons-io:2.11.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
